--- a/create_sql_database.ipynb
+++ b/create_sql_database.ipynb
@@ -15,6 +15,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOM CHANGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-17T21:22:46.674739Z",
@@ -72,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
