--- a/Movies_Cameron.ipynb
+++ b/Movies_Cameron.ipynb
@@ -1643,9 +1643,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "list = [], list[column1]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2178,25 +2176,362 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-436a60de55df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtop_movie_titles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtop_movie_titles\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"movies\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtop_movie_titles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
+     "data": {
+      "text/plain": [
+       "['Avatar',\n",
+       " 'Titanic',\n",
+       " 'Avengers: Infinity War',\n",
+       " 'Star Wars Ep. VII: The Force Awakens',\n",
+       " 'Jurassic World',\n",
+       " 'Furious 7',\n",
+       " 'The Avengers',\n",
+       " 'Harry Potter and the Deathly Hallows: Part II',\n",
+       " 'Black Panther',\n",
+       " 'Jurassic World: Fallen Kingdom',\n",
+       " 'Frozen',\n",
+       " 'Beauty and the Beast',\n",
+       " 'Minions',\n",
+       " 'Avengers: Age of Ultron',\n",
+       " 'The Lord of the Rings: The Return of the King',\n",
+       " 'Incredibles 2',\n",
+       " 'Iron Man 3',\n",
+       " 'Star Wars Ep. VIII: The Last Jedi',\n",
+       " 'Aquaman',\n",
+       " 'The Fate of the Furious',\n",
+       " 'Jurassic Park',\n",
+       " 'Despicable Me 3',\n",
+       " 'Captain Marvel',\n",
+       " 'Transformers: Dark of the Moon',\n",
+       " 'Star Wars Ep. I: The Phantom Menace',\n",
+       " 'Skyfall',\n",
+       " 'The Lion King',\n",
+       " 'Despicable Me 2',\n",
+       " 'Transformers: Age of Extinction',\n",
+       " 'Captain America: Civil War']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_movie_titles = top_50_profit[\"movies\"].to_list()\n",
+    "top_movie_titles = top_50_profit[\"movie\"].to_list()\n",
     "top_movie_titles\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>runtime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>274</th>\n",
+       "      <td>Frozen</td>\n",
+       "      <td>Drama, Horror, Mystery &amp; Suspense</td>\n",
+       "      <td>93.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1017</th>\n",
+       "      <td>Titanic</td>\n",
+       "      <td>Action &amp; Adventure, Classics, Drama, Romance</td>\n",
+       "      <td>97.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1197</th>\n",
+       "      <td>The Avengers</td>\n",
+       "      <td>Action &amp; Adventure</td>\n",
+       "      <td>89.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3027</th>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>Action &amp; Adventure, Comedy, Mystery &amp; Suspense...</td>\n",
+       "      <td>155.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3030</th>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>Action &amp; Adventure, Science Fiction &amp; Fantasy</td>\n",
+       "      <td>141.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3032</th>\n",
+       "      <td>Avengers: Infinity War</td>\n",
+       "      <td>Action &amp; Adventure, Science Fiction &amp; Fantasy</td>\n",
+       "      <td>149.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3321</th>\n",
+       "      <td>Beauty and the Beast</td>\n",
+       "      <td>Animation, Drama, Kids &amp; Family, Musical &amp; Per...</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3323</th>\n",
+       "      <td>Beauty and the Beast</td>\n",
+       "      <td>Drama, Musical &amp; Performing Arts, Science Fict...</td>\n",
+       "      <td>129.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3662</th>\n",
+       "      <td>Black Panther</td>\n",
+       "      <td>Action &amp; Adventure, Drama, Science Fiction &amp; F...</td>\n",
+       "      <td>134.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4287</th>\n",
+       "      <td>Captain America: Civil War</td>\n",
+       "      <td>Action &amp; Adventure, Science Fiction &amp; Fantasy</td>\n",
+       "      <td>146.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4295</th>\n",
+       "      <td>Captain Marvel</td>\n",
+       "      <td>Action &amp; Adventure, Science Fiction &amp; Fantasy</td>\n",
+       "      <td>124.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5425</th>\n",
+       "      <td>Despicable Me 2</td>\n",
+       "      <td>Animation, Comedy, Kids &amp; Family</td>\n",
+       "      <td>98.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5426</th>\n",
+       "      <td>Despicable Me 3</td>\n",
+       "      <td>Animation, Comedy, Kids &amp; Family</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6807</th>\n",
+       "      <td>Frozen</td>\n",
+       "      <td>Action &amp; Adventure, Animation, Comedy, Kids &amp; ...</td>\n",
+       "      <td>102.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6839</th>\n",
+       "      <td>Furious 7</td>\n",
+       "      <td>Action &amp; Adventure, Mystery &amp; Suspense</td>\n",
+       "      <td>137.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8336</th>\n",
+       "      <td>Incredibles 2</td>\n",
+       "      <td>Action &amp; Adventure, Animation, Kids &amp; Family</td>\n",
+       "      <td>118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8474</th>\n",
+       "      <td>Iron Man 3</td>\n",
+       "      <td>Action &amp; Adventure, Science Fiction &amp; Fantasy</td>\n",
+       "      <td>130.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8824</th>\n",
+       "      <td>Jurassic Park</td>\n",
+       "      <td>Action &amp; Adventure, Mystery &amp; Suspense, Scienc...</td>\n",
+       "      <td>126.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8826</th>\n",
+       "      <td>Jurassic World</td>\n",
+       "      <td>Action &amp; Adventure, Mystery &amp; Suspense, Scienc...</td>\n",
+       "      <td>124.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8827</th>\n",
+       "      <td>Jurassic World: Fallen Kingdom</td>\n",
+       "      <td>Action &amp; Adventure, Drama, Science Fiction &amp; F...</td>\n",
+       "      <td>128.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10426</th>\n",
+       "      <td>Minions</td>\n",
+       "      <td>Animation, Comedy, Kids &amp; Family</td>\n",
+       "      <td>91.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13389</th>\n",
+       "      <td>Skyfall</td>\n",
+       "      <td>Action &amp; Adventure, Mystery &amp; Suspense</td>\n",
+       "      <td>143.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14928</th>\n",
+       "      <td>The Fate of the Furious</td>\n",
+       "      <td>Action &amp; Adventure, Drama</td>\n",
+       "      <td>136.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15381</th>\n",
+       "      <td>The Lion King</td>\n",
+       "      <td>Action &amp; Adventure, Animation, Drama, Kids &amp; F...</td>\n",
+       "      <td>87.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15382</th>\n",
+       "      <td>The Lion King</td>\n",
+       "      <td>Action &amp; Adventure, Animation, Drama</td>\n",
+       "      <td>118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15410</th>\n",
+       "      <td>The Lord of the Rings: The Return of the King</td>\n",
+       "      <td>Action &amp; Adventure, Classics, Science Fiction ...</td>\n",
+       "      <td>200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16297</th>\n",
+       "      <td>Titanic</td>\n",
+       "      <td>Drama, Romance</td>\n",
+       "      <td>195.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16442</th>\n",
+       "      <td>Transformers: Age of Extinction</td>\n",
+       "      <td>Action &amp; Adventure, Science Fiction &amp; Fantasy</td>\n",
+       "      <td>165.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16443</th>\n",
+       "      <td>Transformers: Dark of the Moon</td>\n",
+       "      <td>Action &amp; Adventure, Science Fiction &amp; Fantasy</td>\n",
+       "      <td>154.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         movie_title  \\\n",
+       "274                                           Frozen   \n",
+       "1017                                         Titanic   \n",
+       "1197                                    The Avengers   \n",
+       "3027                                          Avatar   \n",
+       "3030                         Avengers: Age of Ultron   \n",
+       "3032                          Avengers: Infinity War   \n",
+       "3321                            Beauty and the Beast   \n",
+       "3323                            Beauty and the Beast   \n",
+       "3662                                   Black Panther   \n",
+       "4287                      Captain America: Civil War   \n",
+       "4295                                  Captain Marvel   \n",
+       "5425                                 Despicable Me 2   \n",
+       "5426                                 Despicable Me 3   \n",
+       "6807                                          Frozen   \n",
+       "6839                                       Furious 7   \n",
+       "8336                                   Incredibles 2   \n",
+       "8474                                      Iron Man 3   \n",
+       "8824                                   Jurassic Park   \n",
+       "8826                                  Jurassic World   \n",
+       "8827                  Jurassic World: Fallen Kingdom   \n",
+       "10426                                        Minions   \n",
+       "13389                                        Skyfall   \n",
+       "14928                        The Fate of the Furious   \n",
+       "15381                                  The Lion King   \n",
+       "15382                                  The Lion King   \n",
+       "15410  The Lord of the Rings: The Return of the King   \n",
+       "16297                                        Titanic   \n",
+       "16442                Transformers: Age of Extinction   \n",
+       "16443                 Transformers: Dark of the Moon   \n",
+       "\n",
+       "                                                  genres  runtime  \n",
+       "274                    Drama, Horror, Mystery & Suspense     93.0  \n",
+       "1017        Action & Adventure, Classics, Drama, Romance     97.0  \n",
+       "1197                                  Action & Adventure     89.0  \n",
+       "3027   Action & Adventure, Comedy, Mystery & Suspense...    155.0  \n",
+       "3030       Action & Adventure, Science Fiction & Fantasy    141.0  \n",
+       "3032       Action & Adventure, Science Fiction & Fantasy    149.0  \n",
+       "3321   Animation, Drama, Kids & Family, Musical & Per...     84.0  \n",
+       "3323   Drama, Musical & Performing Arts, Science Fict...    129.0  \n",
+       "3662   Action & Adventure, Drama, Science Fiction & F...    134.0  \n",
+       "4287       Action & Adventure, Science Fiction & Fantasy    146.0  \n",
+       "4295       Action & Adventure, Science Fiction & Fantasy    124.0  \n",
+       "5425                    Animation, Comedy, Kids & Family     98.0  \n",
+       "5426                    Animation, Comedy, Kids & Family     90.0  \n",
+       "6807   Action & Adventure, Animation, Comedy, Kids & ...    102.0  \n",
+       "6839              Action & Adventure, Mystery & Suspense    137.0  \n",
+       "8336        Action & Adventure, Animation, Kids & Family    118.0  \n",
+       "8474       Action & Adventure, Science Fiction & Fantasy    130.0  \n",
+       "8824   Action & Adventure, Mystery & Suspense, Scienc...    126.0  \n",
+       "8826   Action & Adventure, Mystery & Suspense, Scienc...    124.0  \n",
+       "8827   Action & Adventure, Drama, Science Fiction & F...    128.0  \n",
+       "10426                   Animation, Comedy, Kids & Family     91.0  \n",
+       "13389             Action & Adventure, Mystery & Suspense    143.0  \n",
+       "14928                          Action & Adventure, Drama    136.0  \n",
+       "15381  Action & Adventure, Animation, Drama, Kids & F...     87.0  \n",
+       "15382               Action & Adventure, Animation, Drama    118.0  \n",
+       "15410  Action & Adventure, Classics, Science Fiction ...    200.0  \n",
+       "16297                                     Drama, Romance    195.0  \n",
+       "16442      Action & Adventure, Science Fiction & Fantasy    165.0  \n",
+       "16443      Action & Adventure, Science Fiction & Fantasy    154.0  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_50_genres = df_2.loc[df_2['movie_title'].isin(top_movie_titles)]\n",
+    "top_50_genres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
