--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -3874,7 +3874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -4250,7 +4250,7 @@
        "[1000 rows x 18 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4261,10 +4261,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "_df = df_aud_count_3.columns.str.replace(\" \", \"_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1000 entries, 16297 to 15139\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   movie_title                1000 non-null   object \n",
+      " 1   genres                     1000 non-null   object \n",
+      " 2   directors                  984 non-null    object \n",
+      " 3   tomatometer_rating         1000 non-null   float64\n",
+      " 4   audience_count             1000 non-null   float64\n",
+      " 5   Is_A&A                     1000 non-null   bool   \n",
+      " 6   Comedy                     1000 non-null   bool   \n",
+      " 7   Action & Adventure         1000 non-null   bool   \n",
+      " 8   Drama                      1000 non-null   bool   \n",
+      " 9   Animation                  1000 non-null   bool   \n",
+      " 10  Kids & Family              1000 non-null   bool   \n",
+      " 11  Horror                     1000 non-null   bool   \n",
+      " 12  Mystery & Suspense         1000 non-null   bool   \n",
+      " 13  Cult Movies                1000 non-null   bool   \n",
+      " 14  Classics                   1000 non-null   bool   \n",
+      " 15  Art House & International  1000 non-null   bool   \n",
+      " 16  Musical & Performing Arts  1000 non-null   bool   \n",
+      " 17  Science Fiction & Fantasy  1000 non-null   bool   \n",
+      " 18  Documentary                1000 non-null   bool   \n",
+      "dtypes: bool(14), float64(2), object(3)\n",
+      "memory usage: 60.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_aud_count_3."
+   ]
   },
   {
    "cell_type": "code",
@@ -4282,14 +4326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4300,7 +4337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4309,7 +4346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4367,7 +4404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4376,7 +4413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4385,7 +4422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
