--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -6088,10 +6088,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
   },
   {
    "cell_type": "code",
