--- a/Final_data file scrapeing and cleaning.ipynb
+++ b/Final_data file scrapeing and cleaning.ipynb
@@ -15,6 +15,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "08867643",
+   "metadata": {},
+   "source": [
+    "Personal list needs to be organized as only directors are currently relevents"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "33475dcf",
@@ -73,6 +81,14 @@
     "#remove non directors\n",
     "directors = directors.loc[directors['is_director']==True]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef64db3f",
+   "metadata": {},
+   "source": [
+    "Should filter out directors we lack suffiecent data about."
    ]
   },
   {
@@ -174,6 +190,14 @@
     "directors.head()\n",
     "directors.loc[directors['is_film_director']==True]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed104e20",
+   "metadata": {},
+   "source": [
+    "merge formated director informaiton with monetary data"
    ]
   },
   {
@@ -327,6 +351,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e720ca2f",
+   "metadata": {},
+   "source": [
+    "retrieve ratings data, based on known movies list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "407ff9e0",
@@ -361,6 +393,14 @@
     "df = df.dropna(subset = ['known_ratings'])\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ab3605c",
+   "metadata": {},
+   "source": [
+    "Since movie ID corresponds that that movies IMDB page, the id can be used to construct a url to web scrape the data"
    ]
   },
   {
