adding markdowns to the notebook

--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -1,11 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Analysis of Rotten Tomatoes Database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Here I am importing pandas in order to read in the rotten tomatoes database in which I am working with"
+   ]
   },
   {
    "cell_type": "code",
@@ -14,6 +21,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Here I am using the pd.read_csv function inside of pandas to read and pull up the dataframe in my notebook"
    ]
   },
   {
@@ -529,6 +543,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### df3.info() was used here in order to see where my null values are located and what columns i truly need to look at in this project"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -576,50 +597,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 17712 entries, 0 to 17711\n",
-      "Data columns (total 22 columns):\n",
-      " #   Column                            Non-Null Count  Dtype  \n",
-      "---  ------                            --------------  -----  \n",
-      " 0   rotten_tomatoes_link              17712 non-null  object \n",
-      " 1   movie_title                       17712 non-null  object \n",
-      " 2   movie_info                        17391 non-null  object \n",
-      " 3   critics_consensus                 9134 non-null   object \n",
-      " 4   content_rating                    17712 non-null  object \n",
-      " 5   genres                            17693 non-null  object \n",
-      " 6   directors                         17518 non-null  object \n",
-      " 7   authors                           16170 non-null  object \n",
-      " 8   actors                            17360 non-null  object \n",
-      " 9   original_release_date             16546 non-null  object \n",
-      " 10  streaming_release_date            17328 non-null  object \n",
-      " 11  runtime                           17398 non-null  float64\n",
-      " 12  production_company                17213 non-null  object \n",
-      " 13  tomatometer_status                17668 non-null  object \n",
-      " 14  tomatometer_rating                17668 non-null  float64\n",
-      " 15  tomatometer_count                 17668 non-null  float64\n",
-      " 16  audience_status                   17264 non-null  object \n",
-      " 17  audience_rating                   17416 non-null  float64\n",
-      " 18  audience_count                    17415 non-null  float64\n",
-      " 19  tomatometer_top_critics_count     17712 non-null  int64  \n",
-      " 20  tomatometer_fresh_critics_count   17712 non-null  int64  \n",
-      " 21  tomatometer_rotten_critics_count  17712 non-null  int64  \n",
-      "dtypes: float64(5), int64(3), object(14)\n",
-      "memory usage: 3.0+ MB\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "df3.info()"
+    "#### Creating the exact data frame that I can work with by only adding the colums in which I need to access and not using the others"
    ]
   },
   {
@@ -638,197 +619,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>movie_title</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>directors</th>\n",
-       "      <th>tomatometer_rating</th>\n",
-       "      <th>audience_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Percy Jackson &amp; the Olympians: The Lightning T...</td>\n",
-       "      <td>Action &amp; Adventure, Comedy, Drama, Science Fic...</td>\n",
-       "      <td>Chris Columbus</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>254421.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Please Give</td>\n",
-       "      <td>Comedy</td>\n",
-       "      <td>Nicole Holofcener</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>11574.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Comedy, Romance</td>\n",
-       "      <td>Blake Edwards</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>14684.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12 Angry Men (Twelve Angry Men)</td>\n",
-       "      <td>Classics, Drama</td>\n",
-       "      <td>Sidney Lumet</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>105386.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20,000 Leagues Under The Sea</td>\n",
-       "      <td>Action &amp; Adventure, Drama, Kids &amp; Family</td>\n",
-       "      <td>Richard Fleischer</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>68918.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17707</th>\n",
-       "      <td>Zoot Suit</td>\n",
-       "      <td>Drama, Musical &amp; Performing Arts</td>\n",
-       "      <td>Luis Valdez</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>1195.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17708</th>\n",
-       "      <td>Zootopia</td>\n",
-       "      <td>Action &amp; Adventure, Animation, Comedy</td>\n",
-       "      <td>Byron Howard, Rich Moore, Jared Bush</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>101511.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17709</th>\n",
-       "      <td>Zorba the Greek</td>\n",
-       "      <td>Action &amp; Adventure, Art House &amp; International,...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>7146.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17710</th>\n",
-       "      <td>Zulu</td>\n",
-       "      <td>Classics, Drama</td>\n",
-       "      <td>Cy Endfield, Cyril Endfield</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>30193.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17711</th>\n",
-       "      <td>Zulu Dawn</td>\n",
-       "      <td>Action &amp; Adventure, Art House &amp; International,...</td>\n",
-       "      <td>Douglas Hickox</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>4469.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>17712 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             movie_title  \\\n",
-       "0      Percy Jackson & the Olympians: The Lightning T...   \n",
-       "1                                            Please Give   \n",
-       "2                                                     10   \n",
-       "3                        12 Angry Men (Twelve Angry Men)   \n",
-       "4                           20,000 Leagues Under The Sea   \n",
-       "...                                                  ...   \n",
-       "17707                                          Zoot Suit   \n",
-       "17708                                           Zootopia   \n",
-       "17709                                    Zorba the Greek   \n",
-       "17710                                               Zulu   \n",
-       "17711                                          Zulu Dawn   \n",
-       "\n",
-       "                                                  genres  \\\n",
-       "0      Action & Adventure, Comedy, Drama, Science Fic...   \n",
-       "1                                                 Comedy   \n",
-       "2                                        Comedy, Romance   \n",
-       "3                                        Classics, Drama   \n",
-       "4               Action & Adventure, Drama, Kids & Family   \n",
-       "...                                                  ...   \n",
-       "17707                   Drama, Musical & Performing Arts   \n",
-       "17708              Action & Adventure, Animation, Comedy   \n",
-       "17709  Action & Adventure, Art House & International,...   \n",
-       "17710                                    Classics, Drama   \n",
-       "17711  Action & Adventure, Art House & International,...   \n",
-       "\n",
-       "                                  directors  tomatometer_rating  \\\n",
-       "0                            Chris Columbus                49.0   \n",
-       "1                         Nicole Holofcener                87.0   \n",
-       "2                             Blake Edwards                67.0   \n",
-       "3                              Sidney Lumet               100.0   \n",
-       "4                         Richard Fleischer                89.0   \n",
-       "...                                     ...                 ...   \n",
-       "17707                           Luis Valdez                56.0   \n",
-       "17708  Byron Howard, Rich Moore, Jared Bush                98.0   \n",
-       "17709                                   NaN                80.0   \n",
-       "17710           Cy Endfield, Cyril Endfield                96.0   \n",
-       "17711                        Douglas Hickox                50.0   \n",
-       "\n",
-       "       audience_count  \n",
-       "0            254421.0  \n",
-       "1             11574.0  \n",
-       "2             14684.0  \n",
-       "3            105386.0  \n",
-       "4             68918.0  \n",
-       "...               ...  \n",
-       "17707          1195.0  \n",
-       "17708        101511.0  \n",
-       "17709          7146.0  \n",
-       "17710         30193.0  \n",
-       "17711          4469.0  \n",
-       "\n",
-       "[17712 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "df3_0"
+    "#### Below I sorted all of the columns in this dataframe by the tomatometer_rating column from 100 to 0\n",
+    "#### I used the inplace=True function in order to make the changes update in the dataframe "
    ]
   },
   {
@@ -850,6 +645,13 @@
    ],
    "source": [
     "df3_0.sort_values(by= 'tomatometer_rating', ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### I used the .head(25) to check my work and ensure that the code I ran above has taken place effectively"
    ]
   },
   {
@@ -1212,6 +1014,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### I used the .mean() function on the audience_count column to find the mean of voters who submitted votes on Rotten Tomatoes in order to see the spread of data in this dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -1232,6 +1041,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In this step I am using the .median() function in order to retrieve an accurate description of the median of this data set to help myself know how whether or not I need to drop rows to make the dataset "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -1249,6 +1065,13 @@
    ],
    "source": [
     "df3_0.audience_count.median()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This step below is applying the .loc function to access a dataframe where the audience_count is greater than 5000 voters to get an accurate look at the movies that would be more successful and have more votes to differentiate between"
    ]
   },
   {
@@ -1447,6 +1270,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Below is the same .mean() and .median() functions to understand what changed about the dataset when I took the movies with less than 5000 voters out of the dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1484,6 +1314,13 @@
    ],
    "source": [
     "df_aud_count.audience_count.median()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Below is the same style of function as used before where I am sorting the dataframe by the audience_count column "
    ]
   },
   {
